# drf-tutorial

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
drf_example/: __init__.py  asgi.py  celery.py  custom_exceptions.py  custom_router.py  urls.py  wsgi.py
drf_example/apps/example/: admin.py  apps.py
drf_example/apps/example/api/: renderer.py  router.py
drf_example/apps/example/api/serializers/: __init__.py  author.py  post.py  tag.py
drf_example/apps/example/api/views/: __init__.py  author.py  post.py  tag.py
drf_example/apps/example/migrations/: 0001_initial.py
drf_example/apps/example/models/: __init__.py  author.py  post.py  tag.py
drf_example/settings/: __init__.py  celery.py  settings.py
